--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -16,7 +16,7 @@
             android:layout_width="100dp"
             android:layout_height="80dp"
             android:layout_marginTop="186dp"
-            android:src="@drawable/sp_icon1"
+            android:background="@drawable/sp_icon1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +26,7 @@
             android:layout_width="121dp"
             android:layout_height="32dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/ic_scan_qr2"
+            android:background="@drawable/ic_scan_qr2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv" />
@@ -40,13 +40,14 @@
 
         <com.mikhaellopez.circularprogressbar.CircularProgressBar
             android:id="@+id/progress"
-            app:cpb_background_progressbar_color="#80FFFFFF"
-            app:cpb_progressbar_color="@color/white"
-            app:cpb_progressbar_width="4dp"
-            app:cpb_background_progressbar_width="4dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginBottom="79dp"
+            android:background="#00000000"
+            app:cpb_background_progressbar_color="#80FFFFFF"
+            app:cpb_background_progressbar_width="4dp"
+            app:cpb_progressbar_color="@color/white"
+            app:cpb_progressbar_width="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
